// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator-expiry-warning-password should present field level error message of (failed) password requirements 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-password authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-password"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-password"
              >
                Password
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M11 17h-1V9h8v1h-7v7Zm28 0h-1v-7h-7V9h8v8ZM18 39h-8v-8h1v7h7v1Zm21 0h-8v-1h7v-7h1v8Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimaryDark"
                d="m14.91 22.067-1.829 1.064V21h-1v2.131l-1.83-1.064-.502.866L11.585 24l-1.836 1.067.502.866 1.83-1.064V27h1v-2.131l1.829 1.064.503-.866L13.576 24l1.837-1.067-.503-.866Zm7.946 0-1.829 1.064V21h-1v2.131l-1.829-1.064-.503.866L19.531 24l-1.836 1.067.503.866 1.83-1.064V27h1v-2.131l1.828 1.064.503-.866L21.523 24l1.836-1.067-.503-.866Zm7.946 0-1.829 1.064V21h-1v2.131l-1.829-1.064-.503.866L27.477 24l-1.836 1.067.503.866 1.83-1.064V27h1v-2.131l1.828 1.064.503-.866L29.47 24l1.836-1.067-.503-.866Zm8.448.866-.501-.866-1.83 1.064V21h-1v2.131l-1.83-1.064-.502.866L35.424 24l-1.837 1.067.503.866 1.829-1.064V27h1v-2.131l1.83 1.064.502-.866L37.415 24l1.836-1.067Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="testUser@okta.com"
              >
                testUser@okta.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-13"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-14"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-16"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-17"
            >
              <div
                class="MuiBox-root emotion-18"
              >
                <div
                  class="MuiBox-root emotion-19"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-20"
                    data-se="o-form-head"
                    id="reenroll-authenticator-warning_Title_Your_password_will_expire_in_4_days_okta_password_aut6ci0ZJwJCQ5v6f0g4_1"
                    tabindex="-1"
                  >
                    Your password will expire in 4 days
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <div
                  class="MuiBox-root emotion-19"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                    data-se="o-form-explain"
                    id="reenroll-authenticator-warning_Description_When_your_password_expires_you_will_be_locked_out_of_your_Okta_account_okta_password_aut6ci0ZJwJCQ5v6f0g4_2"
                  >
                    When your password expires you will be locked out of your Okta account.
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <figure
                  class="MuiBox-root emotion-25"
                  data-se="password-authenticator--rules"
                  id="reenroll-authenticator-warning_PasswordRequirements_okta_password_aut6ci0ZJwJCQ5v6f0g4_3"
                >
                  <figcaption
                    class="password-authenticator--heading MuiBox-root emotion-9"
                  >
                    Password requirements:
                  </figcaption>
                  <ul
                    class="MuiBox-root emotion-27"
                    id="password-authenticator--list"
                  >
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            At least 8 characters
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            A lowercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            An uppercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            A number
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            A symbol
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            No parts of your username
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            Does not include your first name
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-32"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            Does not include your last name
                          </p>
                        </div>
                      </div>
                    </li>
                  </ul>
                </figure>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <input
                  class="hidden"
                  id="username"
                  name="username"
                  type="text"
                />
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-87"
                    for="credentials.passcode"
                  >
                    New password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-88"
                    required="true"
                  >
                    <input
                      aria-describedby=" credentials.passcode-error reenroll-authenticator-warning_PasswordRequirements_okta_password_aut6ci0ZJwJCQ5v6f0g4_3 "
                      aria-invalid="true"
                      autocomplete="new-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-89"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      required=""
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-90"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-91"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-94"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      <div
                        class="MuiBox-root emotion-95"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-96"
                        >
                          Password requirements were not met
                        </p>
                        <ul
                          class="MuiList-root MuiList-dense emotion-97"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-98"
                          >
                            At least 8 characters
                          </li>
                          <li
                            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-98"
                          >
                            An uppercase letter
                          </li>
                          <li
                            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-98"
                          >
                            A number
                          </li>
                          <li
                            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-98"
                          >
                            A symbol
                          </li>
                        </ul>
                      </div>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-87"
                    for="confirmPassword"
                  >
                    Re-enter password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-88"
                    required="true"
                  >
                    <input
                      aria-describedby=" confirmPassword-error reenroll-authenticator-warning_PasswordRequirements_okta_password_aut6ci0ZJwJCQ5v6f0g4_3 "
                      aria-invalid="true"
                      autocomplete="new-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-89"
                      data-se="confirmPassword"
                      id="confirmPassword"
                      name="confirmPassword"
                      required=""
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-90"
                    >
                      <button
                        aria-controls="confirmPassword"
                        aria-label="Show re-entered password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-91"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-94"
                      data-se="confirmPassword-error"
                      id="confirmPassword-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <div
                  class="MuiBox-root emotion-9"
                  data-se="password-authenticator--matches"
                >
                  <ul
                    aria-hidden="true"
                    class="MuiBox-root emotion-114"
                    id="credentials.newPassword-list"
                  >
                    <li
                      class="MuiBox-root emotion-28"
                    >
                      <div
                        class="MuiBox-root emotion-29"
                      >
                        <div
                          class="MuiBox-root emotion-30"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-31"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorGrey.500 MuiSvgIcon-fontSizeInherit emotion-15"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 7.2929L2.35355 1.64645L1.64644 2.35355L7.29289 8L1.64645 13.6464L2.35355 14.3536L8 8.70711L13.6464 14.3536L14.3535 13.6464L8.7071 8L14.3536 2.35355L13.6464 1.64645L8 7.2929Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                incomplete
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-34"
                          >
                            Passwords must match
                          </p>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-123"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Change Password
                </button>
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <button
                  class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-125"
                  data-se="skip"
                  role="link"
                >
                  Remind me later
                </button>
              </div>
              <div
                class="MuiBox-root emotion-18"
              >
                <button
                  class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-125"
                  data-se="cancel"
                  role="link"
                >
                  Back to sign in
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-expiry-warning-password should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="generated"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-password authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="generated"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="generated"
              >
                Password
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M11 17h-1V9h8v1h-7v7Zm28 0h-1v-7h-7V9h8v8ZM18 39h-8v-8h1v7h7v1Zm21 0h-8v-1h7v-7h1v8Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimaryDark"
                d="m14.91 22.067-1.829 1.064V21h-1v2.131l-1.83-1.064-.502.866L11.585 24l-1.836 1.067.502.866 1.83-1.064V27h1v-2.131l1.829 1.064.503-.866L13.576 24l1.837-1.067-.503-.866Zm7.946 0-1.829 1.064V21h-1v2.131l-1.829-1.064-.503.866L19.531 24l-1.836 1.067.503.866 1.83-1.064V27h1v-2.131l1.828 1.064.503-.866L21.523 24l1.836-1.067-.503-.866Zm7.946 0-1.829 1.064V21h-1v2.131l-1.829-1.064-.503.866L27.477 24l-1.836 1.067.503.866 1.83-1.064V27h1v-2.131l1.828 1.064.503-.866L29.47 24l1.836-1.067-.503-.866Zm8.448.866-.501-.866-1.83 1.064V21h-1v2.131l-1.83-1.064-.502.866L35.424 24l-1.837 1.067.503.866 1.829-1.064V27h1v-2.131l1.83 1.064.502-.866L37.415 24l1.836-1.067Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="testUser@okta.com"
              >
                testUser@okta.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiBox-root emotion-13"
              >
                <div
                  class="MuiBox-root emotion-14"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-15"
                    data-se="o-form-head"
                    id="generated"
                    tabindex="-1"
                  >
                    Your password will expire in 4 days
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <div
                  class="MuiBox-root emotion-14"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-18"
                    data-se="o-form-explain"
                    id="generated"
                  >
                    When your password expires you will be locked out of your Okta account.
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <figure
                  class="MuiBox-root emotion-20"
                  data-se="password-authenticator--rules"
                  id="generated"
                >
                  <figcaption
                    class="password-authenticator--heading MuiBox-root emotion-9"
                  >
                    Password requirements:
                  </figcaption>
                  <ul
                    class="MuiBox-root emotion-22"
                    id="generated"
                  >
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            At least 8 characters
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            A lowercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            An uppercase letter
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            A number
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            A symbol
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            No parts of your username
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            Does not include your first name
                          </p>
                        </div>
                      </div>
                    </li>
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeInherit emotion-27"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 5.5C8.14834 5.5 8.29334 5.45601 8.41668 5.3736C8.54001 5.29119 8.63614 5.17406 8.69291 5.03701C8.74968 4.89997 8.76453 4.74917 8.73559 4.60368C8.70665 4.4582 8.63522 4.32456 8.53033 4.21967C8.42544 4.11478 8.2918 4.04335 8.14632 4.01441C8.00083 3.98547 7.85003 4.00033 7.71299 4.05709C7.57594 4.11386 7.45881 4.20999 7.3764 4.33332C7.29399 4.45666 7.25 4.60166 7.25 4.75C7.25 4.94891 7.32902 5.13968 7.46967 5.28033C7.61032 5.42098 7.80109 5.5 8 5.5ZM8.5 7.5C8.5 7.22386 8.27614 7 8 7C7.72386 7 7.5 7.22386 7.5 7.5V12H8.5V7.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                info
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            Does not include your last name
                          </p>
                        </div>
                      </div>
                    </li>
                  </ul>
                </figure>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <input
                  class="hidden"
                  id="generated"
                  name="username"
                  type="text"
                />
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-82"
                    for="credentials.passcode"
                  >
                    New password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-83"
                    required="true"
                  >
                    <input
                      aria-describedby="reenroll-authenticator-warning_PasswordRequirements_okta_password_aut6ci0ZJwJCQ5v6f0g4_3"
                      aria-invalid="false"
                      autocomplete="new-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-84"
                      data-se="credentials.passcode"
                      id="generated"
                      name="credentials.passcode"
                      required=""
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-85"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-86"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-87"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-82"
                    for="confirmPassword"
                  >
                    Re-enter password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-83"
                    required="true"
                  >
                    <input
                      aria-describedby="reenroll-authenticator-warning_PasswordRequirements_okta_password_aut6ci0ZJwJCQ5v6f0g4_3"
                      aria-invalid="false"
                      autocomplete="new-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-84"
                      data-se="confirmPassword"
                      id="generated"
                      name="confirmPassword"
                      required=""
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-85"
                    >
                      <button
                        aria-controls="confirmPassword"
                        aria-label="Show re-entered password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-86"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-87"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <div
                  class="MuiBox-root emotion-9"
                  data-se="password-authenticator--matches"
                >
                  <ul
                    aria-hidden="true"
                    class="MuiBox-root emotion-98"
                    id="generated"
                  >
                    <li
                      class="MuiBox-root emotion-23"
                    >
                      <div
                        class="MuiBox-root emotion-24"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          <div
                            aria-hidden="true"
                            class="passwordRequirementIcon MuiBox-root emotion-26"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-colorGrey.500 MuiSvgIcon-fontSizeInherit emotion-87"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M8 7.2929L2.35355 1.64645L1.64644 2.35355L7.29289 8L1.64645 13.6464L2.35355 14.3536L8 8.70711L13.6464 14.3536L14.3535 13.6464L8.7071 8L14.3536 2.35355L13.6464 1.64645L8 7.2929Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                incomplete
                              </title>
                            </svg>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-29"
                          >
                            Passwords must match
                          </p>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-107"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Change Password
                </button>
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <button
                  class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-109"
                  data-se="skip"
                  role="link"
                >
                  Remind me later
                </button>
              </div>
              <div
                class="MuiBox-root emotion-13"
              >
                <button
                  class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-109"
                  data-se="cancel"
                  role="link"
                >
                  Back to sign in
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;
